--- a/app1/core/templates/core/dashboard.html
+++ b/app1/core/templates/core/dashboard.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Dashboard</h1>
+        <h1>App1</h1>
         <div id="error-message" class="error"></div>
         <div id="success-message" class="success"></div>
         
