--- a/app1/core/templates/core/login.html
+++ b/app1/core/templates/core/login.html
@@ -11,7 +11,7 @@
 <body>
     <div class="form-container">
         <div class="form-box">
-            <h2>Login</h2>
+            <h2>App1</h2>
             <form id="loginForm">
                 {% csrf_token %}
                 <div class="form-group">
